# multifold

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.github/: dependabot.yml
.github/scripts/: check_ac0_compressed_gt.py  check_ac0_compressed_meta.py  check_ac0_compressed_pcap.py
.github/workflows/: ci.yml
scenarios/: ac-0-campaign.scenario.yaml  ac-0-compressed.scenario.yaml  ac-0.scenario.yaml  ac-1-mixed-distro.scenario.yaml  ac-2-tls.scenario.yaml  ac-2-windows.scenario.yaml
scenarios/ac-0-expected/: meta.json
scenarios/ac-0-expected/ground_truth/: manifest.jsonl
scenarios/ac-0-expected/net/: capture-lan.pcap
src/: activity.rs  falco.rs  ground_truth.rs  infra.rs  main.rs  meta.rs  pcap.rs  scenario.rs  sysmon.rs  test_util.rs  time.rs  validator.rs  vm.rs
